src/test/results/deca/codegen/invalid/Objet/IncorrectAssembly.res
LIGNE  107 -- erreur syntaxique
